--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,55 @@
+/*------------------------------------*\
+          GENERAL
+\*------------------------------------*/
+
 * {
+  margin: 0;
+  padding: 0;
   font-family: 'Lato', sans-serif;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
   text-align: center;
   text-transform: uppercase;
+  font-weight: 300;
+}
 
+i, #middle-part i {
+  color: #FD818E;
+  font-size: 40px;
+  display: inline-block;
+  margin-right: 5px;
+  line-height: 1;
+  margin-top: -4px;
 }
-.ion-ios-plus-outline, .ion-ios-loop, .ion-ios-download-outline{
-  color:#FD818E;
-}
+
+
 /*------------------------------------*\
           MAIN PART
 \*------------------------------------*/
+
 .container-gamebox {
   display: flex;
-
-}
-
-.gamebox {
-  display: flex;
-  /*flex-direction: column;*/
   justify-content: center;
+  height: 100vh;
+  width: 80%;
+  font-weight: 300;
 }
 
-.gamebox h1 {
+.players {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 20px;
+  margin: auto;
+}
+
+.player-score h1 {
+  font-weight: 300;
 }
 
 .left-half {
@@ -32,12 +60,77 @@
 
 .right-half {
   border-color: #FFFFFF;
-  background-position: center;
-  background-size: cover;
-  background-attachment: fixed;
   flex: 1;
   padding: 15%;
 }
-.btn {
-  background-color: #FF1737;
+
+.totalScore {
+  color: pink;
+  text-align: center;
+  font-size: 100px;
+  margin: 40px 0;
+}
+
+
+/*------------------------------------*\
+          MIDDLE PART
+\*------------------------------------*/
+
+#middle-part {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  justify-content: space-around;
+  height: 100vh;
+  position: absolute;
+}
+
+#middle-part img {
+  width: 150px;
+  height: auto;
+  box-shadow: 0 0 20px rgb(196, 200, 199);
+}
+
+#middle-part button {
+  width: 200px;
+  margin: 20px 0;
+  border: none;
+  background: none;
+  border-color: none;
+  font-size: 20px;
+  font-weight: 300;
+  color: #555;
+  text-transform: uppercase;
+}
+
+#middle-part button:focus {
+  outline: 0;
+}
+
+#hold-btn {
+  margin-bottom: 200px;
+}
+
+
+/*------------------------------------*\
+          CURRENR SCORE BOX
+\*------------------------------------*/
+
+.current-score-box {
+  background-color: #EB4D4D;
+  padding: 15px;
+  width: 150px;
+  margin: 100px 0;
+  text-align: center;
+}
+
+.current-score-box h3 {
+  font-weight: 300;
+  font-size: 15px;
+}
+
+.current-score-box p {
+  color: #fff;
+  font-size: 25px;
 }
