script.js roll dice function

--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,12 @@ i, #middle-part i {
 
 .player-score h1 {
   font-weight: 300;
+  font-size: 300%;
+  font-size: 20px;
+
+}
+.player-score h1 i {
+  font-size: 20px;
 }
 
 .left-half {
@@ -94,7 +100,7 @@ i, #middle-part i {
 
 #middle-part button {
   width: 200px;
-  margin: 20px 0;
+  margin: 0;
   border: none;
   background: none;
   border-color: none;
@@ -103,13 +109,15 @@ i, #middle-part i {
   color: #555;
   text-transform: uppercase;
 }
-
+#middle-part button i {
+  position: relative;
+/* Adjust these values accordingly */
+}
 #middle-part button:focus {
   outline: 0;
 }
 
 #hold-btn {
-  margin-bottom: 200px;
 }
 
 
